scheletro griglia sm

--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
         <div class="width-box">
           <div class="container">
             <div class="row">
-              <div class="col-xs-11">
+              <div class="col-xs-11 col-sm-4">
                 <h2>START BOOSTRAP</h2>
               </div>
-              <div class="col-xs-1">
+              <div class="col-xs-1 col-sm-5 col-sm-offset-3">
                 <i class="fas fa-bars"></i>
+                <ul>
+                  <li>PORTFOLIO</li>
+                  <li>ABOUT</li>
+                  <li>CONTACT</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -44,27 +49,27 @@
             <h2>PORTFOLIO</h2>
             <hr>
             <div class="row">
-              <div id="house" class="col-xs-12">
+              <div id="house" class="col-xs-12 col-sm-6">
                 <img src="" alt="">
               </div>
 
-              <div id="cake" class="col-xs-12 ">
+              <div id="cake" class="col-xs-12 col-sm-6 ">
                 <img src="" alt="">
               </div>
 
-              <div id="circus" class="col-xs-12">
+              <div id="circus" class="col-xs-12 col-sm-6">
                 <img src="" alt="">
               </div>
 
-              <div id="joypad" class="col-xs-12">
+              <div id="joypad" class="col-xs-12 col-sm-6">
                 <img src="" alt="">
               </div>
 
-              <div id="safe" class="col-xs-12">
+              <div id="safe" class="col-xs-12 col-sm-6">
                 <img src="" alt="">
               </div>
 
-              <div id="submarine" class="col-xs-12">
+              <div id="submarine" class="col-xs-12 col-sm-6">
                 <img src="" alt="">
               </div>
             </div>
@@ -78,11 +83,11 @@
             <h3>ABOUT</h3>
             <hr>
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-xs-12 col-sm-6">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
 
-              <div class="col-xs-12">
+              <div class="col-xs-12 col-sm-6">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               </div>
             </div>
@@ -125,12 +130,12 @@
         <div class="width-box">
           <div class="container">
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-xs-12 col-sm-4">
                 <h5>LOCATION</h5>
                 <p>testoooooooooo</p>
                 <span>MO 542243</span>
               </div>
-              <div class="col-xs-12">
+              <div class="col-xs-12 col-sm-4">
                 <h5>AROUND THE WEB</h5>
                 <a href="#"><i class="fab fa-facebook-square"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
@@ -138,7 +143,7 @@
                   <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 <a href="#"></a>
               </div>
-              <div class="col-xs-12">
+              <div class="col-xs-12 col-sm-4">
                 <h5>ABOUT FREELANCER</h5>
                 <p>testo testoooooooooooooooooooooooo testooooooooooooooooooooooooooooooooo</p>
               </div>
