display none lista e icona menu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               </div>
               <div class="col-xs-1 col-sm-5 col-sm-offset-3">
                 <i class="fas fa-bars"></i>
-                <ul>
+                <ul id="header-list">
                   <li>PORTFOLIO</li>
                   <li>ABOUT</li>
                   <li>CONTACT</li>
@@ -49,27 +49,27 @@
             <h2>PORTFOLIO</h2>
             <hr>
             <div class="row">
-              <div id="house" class="col-xs-12 col-sm-6">
+              <div id="house" class="col-xs-12 col-sm-6 col-lg-4">
                 <img src="" alt="">
               </div>
 
-              <div id="cake" class="col-xs-12 col-sm-6 ">
+              <div id="cake" class="col-xs-12 col-sm-6 col-lg-4 ">
                 <img src="" alt="">
               </div>
 
-              <div id="circus" class="col-xs-12 col-sm-6">
+              <div id="circus" class="col-xs-12 col-sm-6 col-lg-4">
                 <img src="" alt="">
               </div>
 
-              <div id="joypad" class="col-xs-12 col-sm-6">
+              <div id="joypad" class="col-xs-12 col-sm-6 col-lg-4">
                 <img src="" alt="">
               </div>
 
-              <div id="safe" class="col-xs-12 col-sm-6">
+              <div id="safe" class="col-xs-12 col-sm-6 col-lg-4">
                 <img src="" alt="">
               </div>
 
-              <div id="submarine" class="col-xs-12 col-sm-6">
+              <div id="submarine" class="col-xs-12 col-sm-6 col-lg-4">
                 <img src="" alt="">
               </div>
             </div>
