--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
             <h2>PORTFOLIO</h2>
             <hr>
             <div class="row">
-              <div id="house" class="col-xs-12 col-sm-6 col-lg-4">
+              <div id="house" class="col-xs-12 col-sm-6 col-lg-4 border-radius">
                 <img src="" alt="">
               </div>
 
-              <div id="cake" class="col-xs-12 col-sm-6 col-lg-4 ">
+              <div id="cake" class="col-xs-12 col-sm-6 col-lg-4  border-radius">
                 <img src="" alt="">
               </div>
 
-              <div id="circus" class="col-xs-12 col-sm-6 col-lg-4">
+              <div id="circus" class="col-xs-12 col-sm-6 col-lg-4 border-radius">
                 <img src="" alt="">
               </div>
 
-              <div id="joypad" class="col-xs-12 col-sm-6 col-lg-4">
+              <div id="joypad" class="col-xs-12 col-sm-6 col-lg-4 border-radius">
                 <img src="" alt="">
               </div>
 
-              <div id="safe" class="col-xs-12 col-sm-6 col-lg-4">
+              <div id="safe" class="col-xs-12 col-sm-6 col-lg-4 border-radius">
                 <img src="" alt="">
               </div>
 
-              <div id="submarine" class="col-xs-12 col-sm-6 col-lg-4">
+              <div id="submarine" class="col-xs-12 col-sm-6 col-lg-4 border-radius">
                 <img src="" alt="">
               </div>
             </div>
@@ -80,7 +80,7 @@
       <section id="main-mid-box">
         <div class="width-box-80">
           <div class="container">
-            <h3>ABOUT</h3>
+            <h2>ABOUT</h2>
             <hr>
             <div class="row">
               <div class="col-xs-12 col-sm-6">
@@ -100,7 +100,7 @@
 
       <section id="main-bottom-box">
         <div class="width-box-80">
-          <h3>CONTACT ME</h3>
+          <h2>CONTACT ME</h2>
           <hr>
           <div class="">
             <h4>Name</h4>
@@ -151,10 +151,9 @@
           </div>
         </div>
       </section>
-
       <section id="footer-bottom">
         <p>Coopyright Web Site 2019</p>
       </section>
     </footer>
   </body>
-  </html>
+</html>
