--- a/index.html
+++ b/index.html
@@ -10,150 +10,118 @@
   </head>
   <body>
     <header>
-      <section id="header-top">
-        <div class="width-box">
-          <div class="container">
-            <div class="row">
-              <div class="col-xs-11 col-sm-4">
-                <h3>START BOOSTRAP</h3>
-              </div>
-              <div class="col-xs-1 col-sm-5 col-sm-offset-3">
-                <i class="fas fa-bars"></i>
-                <ul id="header-list">
-                  <li>PORTFOLIO</li>
-                  <li>ABOUT</li>
-                  <li>CONTACT</li>
-                </ul>
-              </div>
+      <section id="header_top">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-6">
+              <h2>START BOOSTRAP</h2>
+            </div>
+            <div class="col-xs-6 text-right">
+              <a class="glyphicon glyphicon-align-justify icon_menu visible-xs-inline-block" aria-hidden="true"></a>
+              <ul class="list-inline my_list hidden-xs">
+                <li>PORTFOLIO</li>
+                <li>ABOUT</li>
+                <li>CONTACT</li>
+              </ul>
             </div>
           </div>
         </div>
       </section>
 
-      <section id="header-bottom">
-        <div class="width-box">
-          <div class="jombotron">
-            <img src="" alt="">
-            <h1>START BOOSTRAP</h1>
-            <hr>
-            <h3>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h3>
+      <section id="header_bottom" class="text-center">
+        <img class="mg_tp" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/avataaars.svg" alt="avatar">
+        <h1 class="mg_to">START BOOTSTRAP</h1>
+        <div class="separe_icon mg_tp">
+          <div class="divider_line white_line"></div>
+          <div class="divider_line">
+            <i class="fas fa-star"></i>
           </div>
+          <div class="divider_line white_line"></div>
         </div>
+        <p class="mg_tp">Graphic Artist - Web Designer - Illustrator</p>
       </section>
     </header>
 
     <main>
-      <section id="main-top-box">
-        <div class="width-box">
-          <div class="container">
-            <h2>PORTFOLIO</h2>
-            <hr>
-            <div class="row">
-              <div id="house" class="col-xs-12 col-sm-6 col-lg-4 border-radius">
-                <img src="" alt="">
+      <section id="main_top">
+        <div class="container">
+          <h2 class="text-center mg_tp">PORTFOLIO</h2>
+          <div class="separe_icon pd_tp text-center mg_tp">
+            <div class="divider_line white_line"></div>
+            <div class="divider_line">
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="divider_line white_line"></div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="box_image mg_tp">
+                <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cabin.png" alt="">
               </div>
+            </div>
 
-              <div id="cake" class="col-xs-12 col-sm-6 col-lg-4  border-radius">
-                <img src="" alt="">
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="box_image mg_tp">
+                <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cake.png" alt="">
               </div>
+            </div>
 
-              <div id="circus" class="col-xs-12 col-sm-6 col-lg-4 border-radius">
-                <img src="" alt="">
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="box_image mg_tp">
+                <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/circus.png" alt="">
               </div>
+            </div>
 
-              <div id="joypad" class="col-xs-12 col-sm-6 col-lg-4 border-radius">
-                <img src="" alt="">
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="box_image mg_tp">
+                <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/game.png" alt="">
               </div>
+            </div>
 
-              <div id="safe" class="col-xs-12 col-sm-6 col-lg-4 border-radius">
-                <img src="" alt="">
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="box_image mg_tp">
+                <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png" alt="">
               </div>
+            </div>
 
-              <div id="submarine" class="col-xs-12 col-sm-6 col-lg-4 border-radius">
-                <img src="" alt="">
+            <div class="col-xs-12 col-sm-6 col-lg-4">
+              <div class="box_image mg_tp">
+                <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png" alt="">
               </div>
             </div>
           </div>
         </div>
       </section>
 
-      <section id="main-mid-box">
-        <div class="width-box-80">
-          <div class="container">
-            <h2>ABOUT</h2>
-            <hr>
+      <section id="main_mid">
+        <div class="wrapper_60">
+          <div class="container-fluid">
+            <h2 class="text-center mg_tp">ABOUT</h2>
+            <div class="separe_icon pd_tp text-center mg_tp">
+              <div class="divider_line white_line"></div>
+              <div class="divider_line">
+                <i class="fas fa-star"></i>
+              </div>
+              <div class="divider_line white_line"></div>
+            </div>
             <div class="row">
               <div class="col-xs-12 col-sm-6">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="mg_tp">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
               </div>
-
               <div class="col-xs-12 col-sm-6">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="mg_tp">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
               </div>
             </div>
-            <div class="download-btn">
-              <a href="#">Download</a>
+            <div class="text-center mg_tp">
+              <a class="btn btn-default btn-lg btn_green" href="#">Free Download!</a>
             </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="main-bottom-box">
-        <div class="width-box-80">
-          <h2>CONTACT ME</h2>
-          <hr>
-          <div class="">
-            <h4>Name</h4>
-            <input type="name" name="" value="................................">
-          </div>
-          <div class="">
-            <h4>Email Address</h4>
-            <input type="email" name="" value="................................">
-          </div>
-          <div class="">
-            <h4>Phone Number</h4>
-            <input type="number" name="" value="................................">
-          </div>
-          <div class="">
-            <h4>Message</h4>
-            <textarea name="name" rows="8" cols="80"></textarea>
-          </div>
-          <div class="send-btn">
-            <a href="#">Send</a>
           </div>
         </div>
       </section>
     </main>
 
     <footer>
-      <section id="footer-top">
-        <div class="width-box">
-          <div class="container">
-            <div class="row">
-              <div class="col-xs-12 col-sm-4">
-                <h5>LOCATION</h5>
-                <p>testoooooooooo</p>
-                <span>MO 542243</span>
-              </div>
-              <div class="col-xs-12 col-sm-4">
-                <h5>AROUND THE WEB</h5>
-                <a href="#"><i class="fab fa-facebook-square"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"></a>
-              </div>
-              <div class="col-xs-12 col-sm-4">
-                <h5>ABOUT FREELANCER</h5>
-                <p>testo testoooooooooooooooooooooooo testooooooooooooooooooooooooooooooooo</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section id="footer-bottom">
-        <p>Coopyright Web Site 2019</p>
-      </section>
+
     </footer>
   </body>
-</html>
+  </html>
