--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         <div class="container">
           <h2 class="text-center mg_tp">PORTFOLIO</h2>
           <div class="separe_icon pd_tp text-center mg_tp">
-            <div class="divider_line white_line"></div>
+            <div class="divider_line white_line blue_line"></div>
             <div class="divider_line">
               <i class="fas fa-star"></i>
             </div>
-            <div class="divider_line white_line"></div>
+            <div class="divider_line white_line blue_line"></div>
           </div>
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-lg-4">
@@ -116,6 +116,33 @@
               <a class="btn btn-default btn-lg btn_green" href="#">Free Download!</a>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section id="main_bottom">
+        <div class="wrapper_60">
+          <h2 class="text-center mg_tp">CONTACT ME</h2>
+          <div class="separe_icon pd_tp text-center mg_tp">
+            <div class="divider_line white_line blue_line"></div>
+            <div class="divider_line">
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="divider_line white_line blue_line"></div>
+          </div>
+          <div class="imput_box">
+            <input class=" input_brd_blk mg_tp" type="name" name="" value="Name">
+            <hr class="mg_tp">
+            <input class="input_brd_blk mg_tp" type="email" name="Email Address" value="Email Address">
+            <hr class="mg_tp">
+            <input class=" input_brd_blk mg_tp" type="" name="" value="Phone Number">
+            <hr class="mg_tp">
+            <textarea class="input_brd_blk mg_tp" name="name" rows="8" cols="80">Messagge</textarea>
+            <hr class="mg_tp">
+          </div>
+          <div id="send_btn">
+            <button id="send_green" type="button" class="btn btn-default btn-lg">Send</button>
+          </div>
+
         </div>
       </section>
     </main>
