--- a/index.html
+++ b/index.html
@@ -142,13 +142,47 @@
           <div id="send_btn">
             <button id="send_green" type="button" class="btn btn-default btn-lg">Send</button>
           </div>
-
         </div>
       </section>
     </main>
 
     <footer>
+      <section id="footer_top">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 col-md-4 text-center">
+              <div class="footer_mg_tp">
+                <h3 class="mg_tp">LOCATION</h3>
+                <p class="mg_tp">2215 John Daniel Drive</p>
+                <span>Clark, MO 65243</span>
+              </div>
+            </div>
 
+            <div class="col-xs-12 col-md-4 text-center">
+              <div class="footer_mg_tp">
+                <h3 class="mg_tp">AROUND THE WEB</h3>
+                <div id="icon_social_box" class="mg_tp">
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  <a href="#"><i class="fab fa-instagram-square"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xs-12 col-md-4 text-center">
+              <div class="footer_mg_tp">
+                <h3 class="mg_tp">ABOUT FREELANCER</h3>
+                <p class="mg_tp">Freelance is a free to use, MIT licensed Bootstrap theme created by <span>Start Bootstrap</span>.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="footer_bottom" class="text-center">
+        <span>Copyright &copy; Your Website 2020</span>
+      </section>
     </footer>
   </body>
   </html>
