hover delle immagini

--- a/index.html
+++ b/index.html
@@ -56,36 +56,42 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-lg-4">
               <div class="box_image mg_tp">
+                <span class="none_plus">+</span>
                 <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cabin.png" alt="">
               </div>
             </div>
 
             <div class="col-xs-12 col-sm-6 col-lg-4">
               <div class="box_image mg_tp">
+                  <span class="none_plus">+</span>
                 <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/cake.png" alt="">
               </div>
             </div>
 
             <div class="col-xs-12 col-sm-6 col-lg-4">
               <div class="box_image mg_tp">
+                  <span class="none_plus">+</span>
                 <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/circus.png" alt="">
               </div>
             </div>
 
             <div class="col-xs-12 col-sm-6 col-lg-4">
               <div class="box_image mg_tp">
+                <span class="none_plus">+</span>
                 <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/game.png" alt="">
               </div>
             </div>
 
             <div class="col-xs-12 col-sm-6 col-lg-4">
               <div class="box_image mg_tp">
+                <span class="none_plus">+</span>
                 <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/safe.png" alt="">
               </div>
             </div>
 
             <div class="col-xs-12 col-sm-6 col-lg-4">
               <div class="box_image mg_tp">
+                <span class="none_plus">+</span>
                 <img class="img-rounded" src="http://startbootstrap.github.io/startbootstrap-freelancer/assets/img/portfolio/submarine.png" alt="">
               </div>
             </div>
