rimozione bordi al click input

--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
             <div class="divider_line white_line blue_line"></div>
           </div>
           <div class="imput_box">
-            <input class=" input_brd_blk mg_tp" type="name" name="" value="Name">
+            <input class=" input_brd_blk mg_tp" type="name" name="" placeholder="Name">
             <hr class="mg_tp">
-            <input class="input_brd_blk mg_tp" type="email" name="Email Address" value="Email Address">
+            <input class="input_brd_blk mg_tp" type="email" name="Email Address" placeholder="Email Address">
             <hr class="mg_tp">
-            <input class=" input_brd_blk mg_tp" type="" name="" value="Phone Number">
+            <input class=" input_brd_blk mg_tp" type="" name="" placeholder="Phone Number">
             <hr class="mg_tp">
-            <textarea class="input_brd_blk mg_tp" name="name" rows="5" cols="80">Messagge</textarea>
+            <textarea class="input_brd_blk mg_tp" name="name" rows="5" cols="80">Message</textarea>
             <hr class="mg_tp">
           </div>
           <div id="send_btn">
